{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 88,
  "lineage": "6f380cbe-95c8-38fb-1d47-e14607d9760a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072431b48d8a034b2",
            "arn": "arn:aws:ec2:ap-northeast-1:081670647694:elastic-ip/eipalloc-072431b48d8a034b2",
            "association_id": "eipassoc-0fe0973a8b14af9a9",
            "domain": "vpc",
            "id": "eipalloc-072431b48d8a034b2",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-076991d5f65111afa",
            "private_dns": "ip-10-0-0-25.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.25",
            "public_dns": "ec2-35-74-222-207.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.74.222.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:081670647694:internet-gateway/igw-021a6327f04508823",
            "id": "igw-021a6327f04508823",
            "owner_id": "081670647694",
            "tags": {
              "Name": "my-internet-gateway"
            },
            "tags_all": {
              "Name": "my-internet-gateway"
            },
            "vpc_id": "vpc-06db94f551ca79e6a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:081670647694:loadbalancer/app/api-alb/70e9edc7ff227316",
            "arn_suffix": "app/api-alb/70e9edc7ff227316",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "api-alb-1765355197.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:081670647694:loadbalancer/app/api-alb/70e9edc7ff227316",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "api-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0642d0617a1c591af"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004cb184e51e259b4"
              },
              {
                "subnet_id": "subnet-05ce4f26fd6e1a50a"
              }
            ],
            "subnets": [
              "subnet-004cb184e51e259b4",
              "subnet-05ce4f26fd6e1a50a"
            ],
            "tags": {
              "Name": "api-alb"
            },
            "tags_all": {
              "Name": "api-alb"
            },
            "vpc_id": "vpc-06db94f551ca79e6a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:081670647694:listener/app/api-alb/70e9edc7ff227316/23331510292b1651",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:081670647694:targetgroup/api-tg/1e95807d5b966776",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:081670647694:listener/app/api-alb/70e9edc7ff227316/23331510292b1651",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:081670647694:loadbalancer/app/api-alb/70e9edc7ff227316",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.api_alb",
            "aws_lb_target_group.api_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:081670647694:targetgroup/api-tg/1e95807d5b966776",
            "arn_suffix": "targetgroup/api-tg/1e95807d5b966776",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:081670647694:targetgroup/api-tg/1e95807d5b966776",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:081670647694:loadbalancer/app/api-alb/70e9edc7ff227316"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "api-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "api-target-group"
            },
            "tags_all": {
              "Name": "api-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06db94f551ca79e6a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072431b48d8a034b2",
            "association_id": "eipassoc-0fe0973a8b14af9a9",
            "connectivity_type": "public",
            "id": "nat-0ca60064ede53f714",
            "network_interface_id": "eni-076991d5f65111afa",
            "private_ip": "10.0.0.25",
            "public_ip": "35.74.222.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05ce4f26fd6e1a50a",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:081670647694:route-table/rtb-0c2058b1be6fd9dc5",
            "id": "rtb-0c2058b1be6fd9dc5",
            "owner_id": "081670647694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ca60064ede53f714",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06db94f551ca79e6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:081670647694:route-table/rtb-08d4e62f0e43ab25e",
            "id": "rtb-08d4e62f0e43ab25e",
            "owner_id": "081670647694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021a6327f04508823",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06db94f551ca79e6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054171f85f2ab4369",
            "route_table_id": "rtb-0c2058b1be6fd9dc5",
            "subnet_id": "subnet-0f781aca88aacda8c"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07957d068d398d8a5",
            "route_table_id": "rtb-0c2058b1be6fd9dc5",
            "subnet_id": "subnet-0db22a7a6da19cf14"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private_c",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07695983084b569af",
            "route_table_id": "rtb-08d4e62f0e43ab25e",
            "subnet_id": "subnet-05ce4f26fd6e1a50a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e5c6ccd98ad5056",
            "route_table_id": "rtb-08d4e62f0e43ab25e",
            "subnet_id": "subnet-004cb184e51e259b4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:081670647694:security-group/sg-0642d0617a1c591af",
            "description": "Allow HTTP from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0642d0617a1c591af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "081670647694",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06db94f551ca79e6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:081670647694:security-group/sg-058e642a101fd8a1f",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058e642a101fd8a1f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0642d0617a1c591af"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "081670647694",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-sg"
            },
            "tags_all": {
              "Name": "ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06db94f551ca79e6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:081670647694:subnet/subnet-0f781aca88aacda8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f781aca88aacda8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081670647694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-a"
            },
            "tags_all": {
              "Name": "private-subnet-a"
            },
            "vpc_id": "vpc-06db94f551ca79e6a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:081670647694:subnet/subnet-0db22a7a6da19cf14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db22a7a6da19cf14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081670647694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-c"
            },
            "tags_all": {
              "Name": "private-subnet-c"
            },
            "vpc_id": "vpc-06db94f551ca79e6a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:081670647694:subnet/subnet-05ce4f26fd6e1a50a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ce4f26fd6e1a50a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "081670647694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-06db94f551ca79e6a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:081670647694:subnet/subnet-004cb184e51e259b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004cb184e51e259b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "081670647694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-c"
            },
            "tags_all": {
              "Name": "public-subnet-c"
            },
            "vpc_id": "vpc-06db94f551ca79e6a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:081670647694:vpc/vpc-06db94f551ca79e6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0ebfcef8a28b8a983",
            "default_route_table_id": "rtb-0530de8b1e182a574",
            "default_security_group_id": "sg-06133c798628211d7",
            "dhcp_options_id": "dopt-31e7bc56",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06db94f551ca79e6a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0530de8b1e182a574",
            "owner_id": "081670647694",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}